--- a/index.html
+++ b/index.html
@@ -300,13 +300,13 @@
 
 function joinSquad(squad) {
   const rewards = {
-    'CEO_CTO_CLAUNS': 25,  // 
-    'CAO_HUBS': 21e9,        // 
-    'CPO_VILLAGES': 19e9,    // 
-    'CMO_VILLAS': 18e9,      // 
-    'CAO_CREWS': 10e9,       // 
-    'CPO_GUYS': 8.5e9,       // 
-    'CMO_RESORTS': 7.5e9     // 
+    'CEO_CTO_CLAUNS': 5000,  // 
+    'CAO_HUBS': 2100,        // 
+    'CPO_VILLAGES': 1900,    // 
+    'CMO_VILLAS': 1800,      // 
+    'CAO_CREWS': 1009,       // 
+    'CPO_GUYS': 950,       // 
+    'CMO_RESORTS': 850     // 
   };
 
   let reward = rewards[squad] || 0;
