--- a/index.html
+++ b/index.html
@@ -4,6 +4,80 @@
 <head>
   <meta charset="UTF-8">
   <title>CosmicCoin Mining Airdrop</title>
+  
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-app.js";
+    import { getFirestore, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-firestore.js";
+
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyB_ALVZRrzoiCsO1PUbSDDNHClr-bjdTMA",
+      authDomain: "cosmiccoin-galaxy-airdrop.firebaseapp.com",
+      projectId: "cosmiccoin-galaxy-airdrop",
+      storageBucket: "cosmiccoin-galaxy-airdrop.appspot.com",
+      messagingSenderId: "544564103496",
+      appId: "1:544564103496:web:8f866098ec96c9242a8b7d",
+      measurementId: "G-V2KBXHFY2D"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+
+    // Generate a unique user ID
+    function generateUniqueId() {
+      return 'xxxxxx'.replace(/[x]/g, () => (Math.random() * 36 | 0).toString(36));
+    }
+
+    // Create a new user and store their balance
+    async function createUser() {
+      const userId = generateUniqueId();
+      await setDoc(doc(db, 'users', userId), {
+        userId,
+        balance: 0
+      });
+
+      document.getElementById('userId').innerText = `Your User ID is: ${userId}`;
+      return userId;
+    }
+
+    // Get user balance by ID
+    async function getUserBalance(userId) {
+      const userRef = doc(db, 'users', userId);
+      const userDoc = await getDoc(userRef);
+      if (userDoc.exists()) {
+        return userDoc.data().balance;
+      } else {
+        console.log('No such document!');
+        return null;
+      }
+    }
+
+    // Example usage: Create a user and display their ID
+    document.addEventListener('DOMContentLoaded', () => {
+      document.getElementById('createUserButton').addEventListener('click', async () => {
+        const userId = await createUser();
+        console.log('User created with ID:', userId);
+      });
+
+      document.getElementById('getBalanceButton').addEventListener('click', async () => {
+        const userId = document.getElementById('userIdInput').value;
+        const balance = await getUserBalance(userId);
+        document.getElementById('balance').innerText = `Balance: ${balance}`;
+      });
+    });
+  </script>
+</head>
+<body>
+  <h1>Welcome to the CosmicCoin Airdrop</h1>
+  <button id="createUserButton">Create User</button>
+  <p id="userId"></p>
+  <input type="text" id="userIdInput" placeholder="Enter User ID">
+  <button id="getBalanceButton">Get Balance</button>
+  <p id="balance"></p>
+</body>
+</html>
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-ES3NKKYCS7"></script>
