--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
   </script>
+</head>
+<body>
+  <h1>Welcome to the CosmicCoin Airdrop</h1>
+  <button id="createUserButton">Create User</button>
+  <p id="userId"></p>
+  <button id="getAllUsersButton">Get All Users</button>
 
+ 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-ES3NKKYCS7"></script>
   <script>
