--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
     <h2 class="text-2xl mb-4">Referral Program</h2>
     <p>Invite friends to earn more CosmicCoin!</p>
     <button class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded-full" onclick="inviteFriend()">Invite a Friend</button>
-    <p id="inviteStatus" class="mt-2">Share Wapchat app to invite users.</p>
+    <p id="inviteStatus" class="mt-2">
   </div>
 
   <div id="notificationsSection" class="hidden">
