--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   
 
   
+  
   <script type="module">
     // Import the functions you need from the SDKs you need
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-app.js";
@@ -38,19 +39,19 @@
         console.error('Error signing in anonymously', error);
       });
 
-    // Function to get the user ID from localStorage
+    // Function to get the user ID from localStorage or generate a new one
     function getUserID() {
       let userID = localStorage.getItem('userID');
       if (!userID) {
         userID = generateUserID();
+        localStorage.setItem('userID', userID);
       }
       return userID;
     }
 
-    // Function to generate a new user ID and store it in localStorage
+    // Function to generate a new user ID
     function generateUserID() {
       const userID = 'user-' + Math.random().toString(36).substr(2, 9);
-      localStorage.setItem('userID', userID);
       alert(`Your user ID: ${userID}`);
       return userID;
     }
@@ -58,11 +59,7 @@
     // Function to transfer balance to Firebase Firestore
     async function transferBalanceToServer() {
       const userID = getUserID();
-      const balance = localStorage.getItem('cosmicCoinBalance');
-      if (!balance || parseFloat(balance) <= 0) {
-        alert('No balance to transfer');
-        return;
-      }
+      const balance = localStorage.getItem('cosmicCoinBalance') || '0';
 
       const userDoc = doc(db, "users", userID);
       const userSnapshot = await getDoc(userDoc);
@@ -81,7 +78,7 @@
       localStorage.setItem('cosmicCoinBalance', '0');
     }
 
-    // Example function to manually transfer balance (call this function when needed)
+    // Function to manually transfer balance (call this function when needed)
     function transferBalance() {
       transferBalanceToServer().then(() => {
         console.log('Balance transferred successfully');
@@ -89,13 +86,42 @@
         console.error('Error transferring balance', error);
       });
     }
+
+    // Function to check and display user balance
+    async function displayUserBalance() {
+      const userID = getUserID();
+      const userDoc = doc(db, "users", userID);
+      const userSnapshot = await getDoc(userDoc);
+
+      if (userSnapshot.exists()) {
+        alert(`Your balance: ${userSnapshot.data().balance} CosmicCoin`);
+      } else {
+        alert('No balance found');
+      }
+    }
   </script>
 </head>
 <body>
   <button onclick="transferBalance()">Transfer Balance to Server</button>
+  <button onclick="displayUserBalance()">Check My Balance</button>
 </body>
 </html>
-
+<!-- Service worker registration -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/sw.js')
+          .then(registration => {
+            console.log('ServiceWorker registration successful:', registration);
+          })
+          .catch(error => {
+            console.error('ServiceWorker registration failed:', error);
+          });
+      });
+    } else {
+      console.log('Service workers are not supported.');
+    }
+  </script>
   
 
 
